--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -10,12 +10,13 @@
     </style>
 
     <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.NoActionBar">
-        <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
-        <item name="android:background">@android:color/white</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:background">@null</item>
     </style>
 
+
     <style name="AppTheme.NoActionBarLaunch" parent="AppTheme.NoActionBar">
-        <item name="android:background">@android:color/white</item>
+        <item name="android:background">@drawable/splash</item>
     </style>
 </resources>
