--- a/src/assets/css/styles.pcss
+++ b/src/assets/css/styles.pcss
@@ -1,13 +1,13 @@
-/* tailwind base conflicts with Ionic styles */
+@tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
   html {
     /*
-      Make sure we set the rem value to the base size,
-      since Tailwind units are rem-based.
-     */
+        Make sure we set the rem value to the base size,
+        since Tailwind units are rem-based.
+       */
     font-size: 17px;
   }
 }
@@ -18,30 +18,8 @@
     @apply tracking-normal;
   }
 
-  html.plt-mobileweb ion-button {
-    --border-radius: theme('borderRadius.lg');
-    --padding-top: theme('spacing.2');
-    --padding-bottom: theme('spacing.2');
-    height: unset; /* No need for fixed height on the web */
-  }
-
-  /* On Android, I'm getting a double border under .item-interactive */
-  html.plt-android .item-interactive {
-    --inner-border-width: 0;
-  }
-
-  /* Don't highlight items */
+  /* ion-item has a hardcoded font-size, use the base size */
   ion-item {
-    --background-activated-opacity: 0;
-    --background-focused-opacity: 0;
-  }
-
-  /* On Android, there is no gap between a checkbox and the label. Fix that. */
-  ion-checkbox.md + ion-label {
-    @apply ml-2;
-  }
-
-  ion-select {
-    @apply w-fit;
+    font-size: 1rem;
   }
 }
