--- a/src/assets/css/styles.pcss
+++ b/src/assets/css/styles.pcss
@@ -1,15 +1,13 @@
-@tailwind base;
+/* @tailwind base conflicts with Ionic styles */
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-  html {
-    /*
-        Make sure we set the rem value to the base size,
-        since Tailwind units are rem-based.
-       */
-    font-size: 17px;
-  }
+html {
+  /*
+    Make sure we set the rem value to the base size,
+    since Tailwind units are rem-based.
+   */
+  font-size: 17px;
 }
 
 ion-button {
