feat!: upgrade to Capacitor 6 and Ionic 8

--- a/src/assets/css/styles.pcss
+++ b/src/assets/css/styles.pcss
@@ -12,7 +12,7 @@ html {
 
 ion-button {
   /* Standard Ionic tracking on buttons is too tight for my taste */
-  @apply tracking-normal;
+  @apply tracking-wide;
 }
 
 /* ion-item has a hardcoded font-size, use the base size */
